# langchain-deepagent-bedrock-agentcore

./: .gitignore  Dockerfile  Dockerfile.coding  Dockerfile.research  Makefile  README.md  SESSION_NOTES.md  cdk.json  docker-compose.yml  pyproject.toml  pyrightconfig.json  renaming_plan.md
.githooks/: pre-commit
.github/workflows/: deploy.yml  pr.yml
agent/: agent.py  example_strands_agent.py  main.py  settings.py
agent-sdk/: Makefile  pyproject.toml
agent-sdk/examples/langchain/: README.md  SERVER_README.md  chat_cli.py  example_langchain_agent.py  fastapi_server.py  test_streaming.sh
agent-sdk/examples/strands/: README.md  chat_cli.py  example_strands_agent.py  fastapi_server.py  test_streaming.sh
agent-sdk/scripts/: setup.py
agent-sdk/src/yahoo_dsp_agent_sdk/: agent.py  agent_langchain.py  agui_bridge.py  ai_model.py  callback_handlers.py  chat.py  exceptions.py  hooks.py  logger.py  logging.json  mcps.py  metrics.py  prompt_loader.py  response_handler.py  schemas.py  tool_provider.py
agent-sdk/src/yahoo_dsp_agent_sdk/eval/: __init__.py  base.py  constants.py  mock_builder.py  models.py  report.py  rubric_parser.py
agent-sdk/src/yahoo_dsp_agent_sdk/eval/templates/: deepeval_report.css  deepeval_report.html
agent-sdk/tests/: test_mcps.py
agents/: __init__.py
agents/coding/: __init__.py  agent.py  main.py  settings.py
agents/dsp/: agent.py  settings.py
agents/research/: agent.py  main.py  settings.py
iac/: app.py  base_stack.py  coding_stack.py  research_stack.py  stack.py
scripts/: chat_agui.sh  chat_stream.sh  get_latest_version.py  invoke.py  on_merge.sh  on_pr.sh  update_endpoints.sh
tests/: conftest.py
tests/e2e/: test_deployed_agent.py
tests/unit/: test_agent.py
