[project]
name = "serverless-deep-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag-ui-protocol>=0.1.9",
    "aws-cdk-aws-bedrock-agentcore-alpha>=2.232.1a0",
    "aws-cdk-lib>=2.232.1",
    "bedrock-agentcore[strands-agents]>=1.1.1",
    "boto3>=1.42.4",
    "pydantic-settings>=2.12.0",
    "strands-agents>=1.7.0",
    "strands-agents-tools>=0.1.0",
    "yahoo-dsp-agent-sdk==0.0.0.dev0+d1502db",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "bedrock-agentcore-starter-toolkit>=0.2.2",
    "ruff>=0.14.8",
]

[[tool.uv.index]]
name = "yahoo-pypi"
url = "https://edge.dist.yahoo.com:4443/artifactory/api/pypi/pypi/simple"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]
